--- a/LookAtMePlugin/LookAtMePlugin.csproj
+++ b/LookAtMePlugin/LookAtMePlugin.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Dalamud.NET.Sdk/13.1.0">
   <PropertyGroup>
-    <Version>0.0.0.1</Version>
+    <Version>0.9.0.0</Version>
     <Description>A sample plugin.</Description>
     <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
@@ -9,9 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="..\Data\goat.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Visible>false</Visible>
-    </Content>
+    <Content Include="LookAtMePlugin.json" />
+    <Content Include="packages.lock.json" />
   </ItemGroup>
 </Project>
