:arrow_up: Updated dependencies to new version

--- a/LookAtMePlugin/LookAtMePlugin.csproj
+++ b/LookAtMePlugin/LookAtMePlugin.csproj
@@ -14,4 +14,9 @@
     </Content>
     <Content Include="packages.lock.json" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="DalamudPackager" Version="14.0.1" />
+    <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+  </ItemGroup>
 </Project>
